<resources>
    <string name="app_name">ProyectoNotasPIS</string>
    <string name="title_note">Notes</string>
    <string name="title_to_do">TO-DO</string>
    <string name="title_calendar">Calendar</string>
    <string name="new_note">New note</string>
    <string name="new_todo">New To-Do</string>
    <string name="new_note_description">Add new note</string>
    <string name="element_text">Item text</string>
    <string name="add_description_msg">Note description</string>
    <string name="save_note">Save note</string>
    <string name="play_button_description">Play audio button</string>
    <string name="tulipanes">Tulipanes</string>
    <string name="cielo">Cielo</string>
    <string name="perro">Perro</string>
    <string name="Cuerpo_nota_1">Cuerpo de la Nota 1</string>
    <string name="Cuerpo_nota_2">Cuerpo de la Nota 2</string>
    <string name="introduce_un_nombre">Introduce un nombre</string>
    <string name="nombre_nota">Nombre Nota</string>
    <string name="button">Button</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="boton_atras_nota">boton atras nota</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="Ajustes_Generales">Ajustes Generales</string>
    <string name="Sincronizar_Ahora">Sincronizar Ahora</string>
    <string name="Cerrar_sesion">Cerrar sesion</string>
    <string name="Google">Google</string>

    <string name="enter_todo_hint">ex: Do Homework</string>
    <string name="today_calendar_button">Today</string>
    <string name="empty_field">Empty task</string>
    <string name="due_date_text">Due Date</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_wknd">This Weekend</string>
    <string name="next_week">Next Week</string>
    <string name="radio_high">High</string>
    <string name="radio_med">Medium</string>
    <string name="radio_low">Low</string>
    <string name="image_description">button image</string>
    <string name="about_text">Todoist Clone App - by BAWP - version 0.1</string>
    <string name="add_todos">Add a Todo...</string>
    <string name="Textolargo">fgdfgftytxfnbxljfsojjghghghfhfghfghfghfghfghghghfhfghfghfghfghfghfghfghfghfghfghfghfghfhfghfghfgfghfghfghghfhgfhghghfhfghfghfghfghfghfghfghfghfghfghfghfghfhfghfghfgfghfghfghghfhgfhghghfhfghfghfghfghfghfghfghfghfghfghfghfghfhfghfghfgfghfghfghghfhgfhghghfhfghfghfghfghfghfghfghfghfghfghfghfghfhfghfghfgfghfghfghghfhgfhghghfhfghfghfghfghfghfghfghfghfghfghfghfghfhfghfghfgfghfghfghghfhgfhfghfghfghfghfghfghfghfhfghfghfgfghfghfghghfhgffghfghfghfhghfgfpsijflsjdfñaojflhkdvbsjdokdjvbhkdjsaok``jvbjdsjodkpvjobjdsaokp``o xbjvdcsalnkkòj jbvdbnk`` jovdnklnkojxdnlbjdnkxcfgfcgfgf</string>
    <string name="low">LOW</string>
    <string name="medium">MEDIUM</string>
    <string name="high">HIGH</string>
    <string name="priority">Priority</string>
    <string name="title">Title</string>
    <string name="done">Done</string>
    <string name="inicio">Inicio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>