<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/navigation_settings"
        android:title="@string/Ajustes_Generales"
        android:icon="@android:drawable/ic_menu_my_calendar"
        app:showAsAction="never"
        android:orderInCategory="1"/>

    <item android:id="@+id/navigation_sync"
        android:title="@string/Sincronizar_Ahora"
        android:icon="@android:drawable/stat_notify_sync"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"/>

    <item android:id="@+id/navigation_logout"
        android:title="@string/Cerrar_sesion"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:showAsAction="never"
        android:orderInCategory="5"/>

</menu>