<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_notes">

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.example.proyectonotaspis.view.ui.note.NoteFragment"
        android:label="@string/title_note"
        tools:layout="@layout/fragment_note" />

    <fragment
        android:id="@+id/navigation_to_do"
        android:name="com.example.proyectonotaspis.view.ui.to_do.TodoFragment"
        android:label="@string/title_to_do"
        tools:layout="@layout/fragment_todo" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.proyectonotaspis.view.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />
</navigation>