<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints"
        android:background="@drawable/dialog_bg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:contentDescription="@string/app_name"
            android:elevation="10dp"
            android:scaleType="center"
            android:text="@string/introduce_un_nombre"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary"
            android:textFontWeight="@android:integer/status_bar_notification_info_maxnum"
            android:textSize="29sp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/nombre_nota"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>